# PlaneInterpreter

./: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Utils.cpp  Utils.h  main.cpp
Commands/: Command.h  OpenDataServerCommand.h  RunFromFileCommand.cpp  RunFromFileCommand.h
Expressions/: DivExpression.h  Expression.h  ExpressionCommand.h  ExpressionFactory.cpp  ExpressionFactory.h  NumExpression.h
